--- a/index.html
+++ b/index.html
@@ -7,39 +7,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <style>
 :root{
-  --white:#fff;
-  --black:#0b0f19;
-  --orange:#ff7b00;
-  --red:#e53935;
-  --gray:#f6f6f6;
-  --text:#1e293b;
-  --radius:14px;
+  --white:#fff;--black:#0b0f19;--orange:#ff7b00;--red:#e53935;--gray:#f6f6f6;--text:#1e293b;--radius:14px;
 }
 *{box-sizing:border-box;margin:0;padding:0;font-family:'Inter',sans-serif}
 body{background:var(--gray);color:var(--text);}
 header{text-align:center;padding:20px;background:var(--black);color:var(--white);}
-header h1{font-size:1.6rem;font-weight:600;letter-spacing:1px;}
+header h1{font-size:1.6rem;font-weight:600;}
 main{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;padding:20px;max-width:1000px;margin:auto;}
-.card{background:var(--white);border-radius:var(--radius);overflow:hidden;box-shadow:0 5px 15px rgba(0,0,0,0.08);cursor:pointer;transition:.2s;}
+.card{background:var(--white);border-radius:var(--radius);overflow:hidden;box-shadow:0 5px 15px rgba(0,0,0,.08);cursor:pointer;transition:.2s;}
 .card:hover{transform:translateY(-3px);}
 .card img{width:100%;height:160px;object-fit:cover;}
 .card-content{padding:15px;}
 .card-content h2{font-size:1.1rem;margin-bottom:4px;}
 .card-content p{color:#64748b;font-size:.9rem;margin-bottom:8px;}
 .price{font-weight:600;color:var(--orange);font-size:1rem;}
-
-/* Modal */
 .modal-bg{position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.65);display:none;align-items:center;justify-content:center;z-index:10;}
-.modal{
-  background:var(--white);
-  border-radius:10px;
-  width:95%;
-  max-width:520px;
-  max-height:85vh;
-  overflow-y:auto;
-  animation:fadeIn .25s ease;
-  position:relative;
-}
+.modal{background:var(--white);border-radius:10px;width:95%;max-width:520px;max-height:85vh;overflow-y:auto;animation:fadeIn .25s ease;position:relative;}
 .modal img{width:100%;height:200px;object-fit:cover;}
 .modal-content{padding:20px;padding-top:60px;}
 .modal h2{font-size:1.3rem;margin:10px 0;color:var(--black);}
@@ -50,17 +33,10 @@ section{margin:20px 0;}
 section h3{color:var(--black);font-size:1rem;margin-bottom:6px;}
 section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 .option{display:flex;align-items:center;gap:8px;margin:6px 0;}
-.option input[type="checkbox"]{
-  accent-color:var(--orange);
-  cursor:pointer;width:18px;height:18px;border-radius:50%;
-  appearance:none;border:2px solid #ccc;position:relative;outline:none;
-}
-.option input[type="checkbox"]:checked{border-color:var(--orange);}
-.option input[type="checkbox"]::before{
-  content:"";position:absolute;top:3px;left:3px;width:10px;height:10px;border-radius:50%;
-  background:var(--orange);opacity:0;transition:.2s;
-}
-.option input[type="checkbox"]:checked::before{opacity:1;}
+.option input[type="checkbox"],.option input[type="radio"]{accent-color:var(--orange);cursor:pointer;width:18px;height:18px;border-radius:50%;appearance:none;border:2px solid #ccc;position:relative;outline:none;}
+.option input:checked{border-color:var(--orange);}
+.option input::before{content:"";position:absolute;top:3px;left:3px;width:10px;height:10px;border-radius:50%;background:var(--orange);opacity:0;transition:.2s;}
+.option input:checked::before{opacity:1;}
 .option label{cursor:pointer;}
 .limit-info{text-align:right;font-size:.8rem;color:var(--red);}
 #faltam{text-align:center;color:var(--red);margin-top:8px;font-size:.9rem;font-weight:600;}
@@ -69,22 +45,9 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 #quant{font-weight:600;font-size:1.1rem;}
 .btn-add{width:100%;padding:12px;background:#ddd;color:#999;border:none;border-radius:var(--radius);font-weight:600;text-transform:uppercase;cursor:not-allowed;}
 .btn-active{background:var(--orange);color:var(--white);cursor:pointer;}
-.close{
-  position:fixed;
-  top:12px;right:20px;
-  background:var(--red);
-  border:none;border-radius:50%;
-  width:34px;height:34px;
-  color:var(--white);font-size:1.3rem;
-  cursor:pointer;
-  box-shadow:0 2px 6px rgba(0,0,0,0.3);
-  z-index:30;
-}
+.close{position:fixed;top:12px;right:20px;background:var(--red);border:none;border-radius:50%;width:34px;height:34px;color:var(--white);font-size:1.3rem;cursor:pointer;box-shadow:0 2px 6px rgba(0,0,0,0.3);z-index:30;}
 @keyframes fadeIn{from{opacity:0;transform:scale(.95);}to{opacity:1;transform:scale(1);}}
-@media(max-width:600px){
- main{grid-template-columns:repeat(2,1fr);gap:12px;}
- .card img{height:120px;}
-}
+@media(max-width:600px){main{grid-template-columns:repeat(2,1fr);gap:12px;}.card img{height:120px;}}
 </style>
 </head>
 <body>
@@ -124,13 +87,13 @@ section p.sub{font-size:.85rem;color:#64748b;margin-bottom:8px;}
 </div>
 
 <script>
-const URL_API="https://script.google.com/macros/s/AKfycbyqTo0EHs_BgkAW7K8BuKX8DpmJD8LDrc89caNgjQmzCoydw1BeE1Ju52dWsAQ46P60Sg/exec";
-const CACHE_KEY="monte_prato_cache_v6";
+const URL_API="https://script.google.com/macros/s/AKfycbyMykNvWZAAjwQPiyQ1vyvYKfPdFiuylhfwSlOmKqALCUFMcPHj9SZQ0IxDcA7Qv85mqQ/exec";
+const CACHE_KEY="monte_prato_cache_v7";
 const CACHE_TIME=3*60*60*1000;
 let cachedData=null,totalObrigatorias=0;
 let precoBase=45.00,totalAdicionais=0,q=1;
 
-// ===== Pré-carregamento =====
+// ===== PRÉ-CARREGAR =====
 document.addEventListener("DOMContentLoaded",async()=>{
   const cache=localStorage.getItem(CACHE_KEY);
   if(cache){
@@ -145,7 +108,7 @@ document.addEventListener("DOMContentLoaded",async()=>{
   }catch(e){console.error("Erro ao carregar dados",e);}
 });
 
-// ===== Referências =====
+// ===== REFERÊNCIAS =====
 const modalBg=document.getElementById('modal-bg');
 const blocos=document.getElementById('blocos');
 const faltamEl=document.getElementById('faltam');
@@ -157,7 +120,7 @@ modalBg.onclick=e=>{if(e.target===modalBg)modalBg.style.display='none';};
 document.getElementById('mais').onclick=()=>{q++;qEl.textContent=q;atualizarPreco()};
 document.getElementById('menos').onclick=()=>{if(q>1){q--;qEl.textContent=q;atualizarPreco()}};
 
-// ===== Abrir modal =====
+// ===== ABRIR MODAL =====
 function abrirModal(){
   modalBg.style.display='flex';
   blocos.innerHTML='<p style="text-align:center;color:#888;">Carregando opções...</p>';
@@ -167,7 +130,7 @@ function abrirModal(){
   atualizarPreco();
 }
 
-// ===== Montar blocos =====
+// ===== MONTAR BLOCOS =====
 function montarBlocos(data){
   blocos.innerHTML='';
   totalObrigatorias=Object.keys(data.categorias).length;
@@ -175,11 +138,11 @@ function montarBlocos(data){
     const sec=document.createElement('section');
     sec.dataset.ok='0';
     sec.innerHTML=`<h3>${categoria}</h3>
-      <p class="sub">Mínimo: ${info.minimo} - Selecionados: <span id="sel_${i}">0</span> / ${info.maximo}</p>`;
+    <p class="sub">Mínimo: ${info.minimo} - Selecionados: <span id="sel_${i}">0</span> / ${info.maximo}</p>`;
     info.itens.forEach((item,j)=>{
       const id=`${categoria}_${j}`;
       const input=document.createElement('input');
-      input.type="checkbox";
+      input.type=info.tipo;
       input.name=categoria;
       input.id=id;
       input.dataset.adicional=parseFloat(item.adicional||0);
@@ -199,7 +162,7 @@ function montarBlocos(data){
   atualizarStatus();
 }
 
-// ===== Lógica de seleção =====
+// ===== SELEÇÃO =====
 function gerenciarSelecao(input,sec,info,i){
   const selecionados=[...sec.querySelectorAll('input:checked')];
   const qt=selecionados.length;
@@ -212,7 +175,7 @@ function gerenciarSelecao(input,sec,info,i){
   atualizarStatus();atualizarPreco();
 }
 
-// ===== Atualizar preço =====
+// ===== PREÇO =====
 function atualizarPreco(){
   totalAdicionais=[...blocos.querySelectorAll('input:checked')]
     .reduce((soma,el)=>soma+Number(el.dataset.adicional||0),0);
@@ -220,7 +183,7 @@ function atualizarPreco(){
   btnAdd.textContent=`ADICIONAR AO PEDIDO R$ ${total.toFixed(2).replace('.',',')}`;
 }
 
-// ===== Atualizar status =====
+// ===== STATUS =====
 function atualizarStatus(){
   const ok=[...blocos.querySelectorAll('section')].filter(s=>s.dataset.ok==='1').length;
   const faltam=totalObrigatorias-ok;
