--- a/index.html
+++ b/index.html
@@ -93,13 +93,18 @@ const CACHE_TIME=3*60*60*1000;
 let cachedData=null,totalObrigatorias=0;
 let precoBase=45.00,totalAdicionais=0,q=1;
 
-// ===== PRÉ-CARREGAR =====
-document.addEventListener("DOMContentLoaded",async()=>{
-  try{
-    const r=await fetch(`${URL_API}?acao=listarItens`);
-    cachedData=await r.json();
-  }catch(e){console.error("Erro ao carregar dados",e);}
-});
+// ===== PRÉ-CARREGAR DADOS =====
+async function carregarDados(){
+  const cache=localStorage.getItem(CACHE_KEY);
+  if(cache){
+    const {data,time}=JSON.parse(cache);
+    if(Date.now()-time<CACHE_TIME){cachedData=data;return;}
+  }
+  const r=await fetch(`${URL_API}?acao=listarItens`);
+  const data=await r.json();
+  cachedData=data;
+  localStorage.setItem(CACHE_KEY,JSON.stringify({data,time:Date.now()}));
+}
 
 // ===== REFERÊNCIAS =====
 const modalBg=document.getElementById('modal-bg');
@@ -107,22 +112,30 @@ const blocos=document.getElementById('blocos');
 const faltamEl=document.getElementById('faltam');
 const btnAdd=document.getElementById('btnAdd');
 const qEl=document.getElementById('quant');
-document.getElementById('card-prato').onclick=()=>abrirModal();
 document.getElementById('close').onclick=()=>modalBg.style.display='none';
 modalBg.onclick=e=>{if(e.target===modalBg)modalBg.style.display='none';};
+
+// ===== CONTROLES DE QUANTIDADE =====
 document.getElementById('mais').onclick=()=>{q++;qEl.textContent=q;atualizarPreco()};
 document.getElementById('menos').onclick=()=>{if(q>1){q--;qEl.textContent=q;atualizarPreco()}};
+
+// ===== EVENTO DO CARD =====
+document.getElementById('card-prato').addEventListener('click',async()=>{
+  if(!cachedData) await carregarDados();
+  abrirModal();
+});
 
 // ===== ABRIR MODAL =====
 function abrirModal(){
   modalBg.style.display='flex';
   blocos.innerHTML='<p style="text-align:center;color:#888;">Carregando opções...</p>';
+  faltamEl.style.display='none';
   if(!cachedData){blocos.innerHTML='<p style="color:red;text-align:center;">Erro ao carregar dados.</p>';return;}
   montarBlocos(cachedData);
   atualizarPreco();
 }
 
-// ===== MONTAR BLOCOS =====
+// ===== MONTAR AS CATEGORIAS =====
 function montarBlocos(data){
   blocos.innerHTML='';
   totalObrigatorias=Object.keys(data.categorias).length;
@@ -138,5 +151,8 @@ function montarBlocos(data){
       input.name=categoria;
       input.id=id;
       input.dataset.adicional=parseFloat(item.adicional||0);
-      input.addEventListener('change',()=>gerenciarSelecao(sec,info,i));
-     
+      input.onclick=()=>gerenciarSelecao(input,sec,info,i);
+      const label=document.createElement('label');
+      label.className='option';
+      label.appendChild(input);
+      label.append(' '+item.nome+(item.adicional>0?` (+R$ ${item.adicional.toFixed(2).replace('.',',')})`:''));
